0.9.4 (1/25/2004 to //2004)
------------------------------

Removed wxd decorators in favor of new SWIG-generated docstrings.

Removed docs tabs from crust interface:
* wxPython Docs
* wxSTC Docs

Fixed Calltip tab refresh problem on Windows.


0.9.3 (9/25/2003 to 1/24/2004)
------------------------------

Fun and games with dynamic renaming.  Details of any other changes
were lost in the confusion.  I'll try to do better in the future.


0.9.2 (5/3/2003 to 9/25/2003)
-----------------------------

Changed to the new prefix-less "wx" package::

    import wx

instead of::

    from wxPython import wx

Fixed typo in ``PyWrap.py``::

    if __name__ == '__main__':
        main(sys.argv)

should have been::

    if __name__ == '__main__':
        main()

Added pretty-print Display tab to Crust, based on suggestion from
Jason Whitlark.

Improved ``Can*`` checks in ``EditWindow``, since STC is too lenient,
particularly when it is set to read-only but returns True for
CanPaste() (seems like an STC bug to me)::

    def CanCopy(self):
        """Return True if text is selected and can be copied."""
        return self.GetSelectionStart() != self.GetSelectionEnd()

    def CanCut(self):
        """Return True if text is selected and can be cut."""
        return self.CanCopy() and self.CanEdit()

    def CanEdit(self):
        """Return True if editing should succeed."""
        return not self.GetReadOnly()

    def CanPaste(self):
        """Return True if pasting should succeed."""
        return stc.StyledTextCtrl.CanPaste(self) and self.CanEdit()


0.9.1 (3/21/2003 to 5/2/2003)
-----------------------------

PyCrust is dead!  Long live Py!

* Renamed ``PyCrust`` package to ``py``.
* Moved code to wxPython's CVS repository.

Fixed bug in ``introspect.py`` on introspecting objects occurring
immediately after a secondary prompt, like this::

    >>> l = [1, 2, 3]
    >>> for n in range(3):
    ...     l.  <-- failed to popup autocomplete list

Added documentation files:
